<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <RadioButton
        android:id="@+id/dailyRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/daily"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioButton
        android:id="@+id/weeklyRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/weekly"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioButton
        android:id="@+id/monthlyRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/monthly"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioButton
        android:id="@+id/yearlyRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/yearly"
        tools:ignore="TouchTargetSizeCheck" />

    <RadioButton
        android:id="@+id/allTimeRadioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/all_time"
        tools:ignore="TouchTargetSizeCheck" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/customIntervalButtonContainer">

        <RadioButton
            android:id="@+id/customIntervalRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_interval"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/customIntervalRadioButton"
            android:layout_alignRight="@+id/customIntervalRadioButton"
            android:layout_alignTop="@+id/customIntervalRadioButton"
            android:layout_alignBottom="@+id/customIntervalRadioButton"
            android:id="@+id/customIntervalButtonOverlayView"/>

    </RelativeLayout>

</RadioGroup>
